add machine, logger handler